Build and test the vector module by default
Declare jdk.incubator.vector as requires static so scalar consumers
resolve the module without --add-modules; only VectorFastPFOR users need it.